Fix tabs visibility on media upload

--- a/wwm_rubik_style.scss
+++ b/wwm_rubik_style.scss
@@ -1472,7 +1472,7 @@ html.js fieldset.collapsible div.fieldset-wrapper {
 }
 
 #media-browser-tabset #branding {
-  height: 30px;
+  height: 30px !important;
 }
 
 /*********************************************************************/
